tests/baselines/reference/interfaceExtendingClass2.errors.txt
==== tests/cases/compiler/interfaceExtendingClass2.ts (3 errors) ====
    class Foo {
        x: string;
        y() { }
        get Z() {
            return 1;
        }
        [x: string]: Object;
    }
    
    interface I2 extends Foo { // error
        a: {
        ~~~~
            toString: () => {
    ~~~~~~~~~~~~~~~~~~~~~~~~~
                return 1;
                       ~
!!! interfaceExtendingClass2.ts(13,20): error TS1005: ';' expected.
    ~~~~~~~~~~~~~~~~~~~~~
            };
    ~~~~~~~~~~
        }
         
!!! interfaceExtendingClass2.ts(15,6): error TS1005: '}' expected.
    ~~~~~
!!! interfaceExtendingClass2.ts(11,5): error TS2172: All named properties must be assignable to string indexer type 'Object':
!!! 	Types of property 'toString' of types '{ toString: () => { return: any; 1: any; }; }' and 'Object' are incompatible:
!!! 		Call signatures of types '() => { return: any; 1: any; }' and '() => string' are incompatible.